--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,11 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.+'
+
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    testImplementation 'androidx.test:core:1.0.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
